--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
     <head>
         <script src="../node_modules/angular/angular.js" type="text/javascript"></script>
         <script src="../node_modules/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
+        <script src="js/components/question-card/question-card.module.js"></script>
+        <script src="js/components/question-card/question-card.states.js"></script>
+        <script src="js/components/question-card/question-card.controller.js"></script>
+
         <script type="text/javascript">
-            angular.module("disc", ["ui.router"]);
+            angular.module("disc", ["disc.components.question-card", "ui.router"]);
         </script>
+
         <title>Teste DISC</title>
     </head>
     <body>
