[#3] - Desquebar a rota de questao

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
         <!-- outros -->
 
         <script src="js/components/ajax/ajax.model.js"></script>
+        <script src="js/components/question-card/question-card-api.model.js"></script>
+        <script src="js/components/question-card/question-card.model.js"></script>
         <script src="js/components/question-card/question-card.states.js"></script>
         <script src="js/components/question-card/question-card.controller.js"></script>
 
