--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
         <script src="js/components/question-card/question-card-api.model.js"></script>
         <script src="js/components/question-card/question-card.model.js"></script>
         <script src="js/components/question-card/question-card.states.js"></script>
+        <script src="js/components/question-card/question-card.run.js"></script>
+        <script src="js/components/question-card/questions.repository.js"></script>
         <script src="js/components/question-card/question-card.controller.js"></script>
 
         <script type="text/javascript">
