[#3] - importa arquivos do modelo de respostas no index.html

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,16 @@
     <head>
         <script src="../node_modules/angular/angular.js" type="text/javascript"></script>
         <script src="../node_modules/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
+
         <!-- modules -->
         <script src="js/components/ajax/ajax.module.js"></script>
         <script src="js/components/question-card/question-card.module.js"></script>
+        <script src="js/components/answers/answers.module.js"></script>
 
         <!-- outros -->
 
         <script src="js/components/ajax/ajax.model.js"></script>
+        <script src="js/components/answers/answers.model.js"></script>
         <script src="js/components/question-card/question-card-api.model.js"></script>
         <script src="js/components/question-card/question-card.model.js"></script>
         <script src="js/components/question-card/question-card.states.js"></script>
