sem-issue - passa a usar (paliativamente) bibliotecas externas a partir do cdnjs

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <html data-ng-app="disc">
     <!DOCTYPE html>
     <head>
-        <script src="../node_modules/angular/angular.js" type="text/javascript"></script>
-        <script src="../node_modules/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" type="text/javascript"></script>
 
         <!-- modules -->
         <script src="js/components/ajax/ajax.module.js"></script>
