[#3] - refatora modulo de card para usar adapter e enxuga controller

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
         <script src="js/components/answers/answers.model.js"></script>
         <script src="js/components/question-card/question-card-api.model.js"></script>
         <script src="js/components/question-card/question-card.model.js"></script>
+        <script src="js/components/question-card/question-state.model.js"></script>
         <script src="js/components/question-card/question-card.states.js"></script>
-        <script src="js/components/question-card/question-card.run.js"></script>
         <script src="js/components/question-card/questions.repository.js"></script>
         <script src="js/components/question-card/question-card.controller.js"></script>
 
