[#5] - inicia modulo de tela de resultados

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
         <script src="js/components/ajax/ajax.module.js"></script>
         <script src="js/components/question-card/question-card.module.js"></script>
         <script src="js/components/answers/answers.module.js"></script>
+        <script src="js/components/result-screen/result-screen.module.js"></script>
 
         <!-- outros -->
 
         <script src="js/components/ajax/ajax.model.js"></script>
         <script src="js/components/answers/answers.model.js"></script>
+        <script src="js/components/result-screen/result-screen.state.js"></script>
         <script src="js/components/question-card/question-card-api.model.js"></script>
         <script src="js/components/question-card/question-card.model.js"></script>
         <script src="js/components/question-card/question-state.model.js"></script>
