Closes #5 - exibe dados corretos no final do teste

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
         <script src="js/components/ajax/ajax.model.js"></script>
         <script src="js/components/answers/answers.model.js"></script>
+        <script src="js/components/answers/answers.constant.js"></script>
         <script src="js/components/result-screen/result-screen.state.js"></script>
+        <script src="js/components/result-screen/result-screen.controller.js"></script>
         <script src="js/components/question-card/question-card-api.model.js"></script>
         <script src="js/components/question-card/question-card.model.js"></script>
         <script src="js/components/question-card/question-state.model.js"></script>
