[#14] - Altera forma como calculo de resultado e feito

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         <script src="js/components/answers/answers.constant.js"></script>
         <script src="js/components/home/home.state.js"></script>
         <script src="js/components/home/home.controller.js"></script>
+        <script src="js/components/answers/answers.repository.js"></script>
         <script src="js/components/result-screen/result-screen.state.js"></script>
         <script src="js/components/result-screen/result-screen.controller.js"></script>
         <script src="js/components/question-card/question-card-api.model.js"></script>
