--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
         <script src="js/components/ajax/ajax.module.js"></script>
         <script src="js/disc.module.js"></script>
         <script src="js/components/start/start.module.js"></script>
-        <script src="js/components/question-card/question-card.module.js"></script>
+        <script src="js/components/questions/question.module.js"></script>
         <script src="js/components/answers/answers.module.js"></script>
-        <script src="js/components/result-screen/result-screen.module.js"></script>
-        <script src="js/components/home/home.module.js"></script>
+        <script src="js/views/result-screen/result-screen.module.js"></script>
+        <script src="js/views/home/home.module.js"></script>
 
         <!-- configs -->
         <script src="js/disc.config.js"></script>
@@ -24,17 +24,17 @@
         <script src="js/index.controller.js"></script>
         <script src="js/components/answers/answers.model.js"></script>
         <script src="js/components/answers/answers.constant.js"></script>
-        <script src="js/components/home/home.state.js"></script>
-        <script src="js/components/home/home.controller.js"></script>
+        <script src="js/views/home/home.state.js"></script>
+        <script src="js/views/home/home.controller.js"></script>
         <script src="js/components/answers/answers.repository.js"></script>
-        <script src="js/components/result-screen/result-screen.state.js"></script>
-        <script src="js/components/result-screen/result-screen.controller.js"></script>
-        <script src="js/components/question-card/question-card-api.model.js"></script>
-        <script src="js/components/question-card/question-card.model.js"></script>
-        <script src="js/components/question-card/question-state.model.js"></script>
-        <script src="js/components/question-card/question-card.states.js"></script>
-        <script src="js/components/question-card/questions.repository.js"></script>
-        <script src="js/components/question-card/question-card.controller.js"></script>
+        <script src="js/views/result-screen/result-screen.state.js"></script>
+        <script src="js/views/result-screen/result-screen.controller.js"></script>
+        <script src="js/components/questions/question-api.model.js"></script>
+        <script src="js/components/questions/question-adapter.model.js"></script>
+        <script src="js/components/questions/question-state.model.js"></script>
+        <script src="js/components/questions/question.states.js"></script>
+        <script src="js/components/questions/questions.repository.js"></script>
+        <script src="js/components/questions/question.controller.js"></script>
         <title>Teste DISC</title>
     </head>
     <body data-ng-controller="IndexController as vc">
