[#18] - altera import do script de bundle que estava errado

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html data-ng-app="disc">
     <!DOCTYPE html>
     <head>
-        <script src="dist.js"></script>
+        <script src="bundle.js"></script>
         <title>Teste DISC</title>
     </head>
     <body data-ng-controller="DiscController as vc">
