--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport">
     <meta charset="utf-8">
     <title>Squizze</title>
   </head>
