#31 - apply small change on index to test travis deploy

--- a/index.template.html
+++ b/index.template.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport">
     <meta charset="utf-8">
-    <title>Squizze</title>
+    <title>Squizze - DISC Test</title>
   </head>
   <body>
     <div id="app"></div>
